<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.PortfolioActivity"
    android:orientation="vertical"
    >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="10dp">

        <LinearLayout
            android:id="@+id/firstRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView

                android:id="@+id/Menkul"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/menkul"
                android:background="#f1f1f1"
                android:layout_marginBottom="1dp"

                android:layout_marginTop="1dp"
                android:layout_weight="1"
                app:autoSizeTextType="uniform"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="1dp"


                />

            <TextView

                android:id="@+id/MiktarT2"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/miktar_t2"
                android:background="#f1f1f1"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                app:autoSizeTextType="uniform"
                />

            <TextView

                android:id="@+id/Fiyat"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/fiyat"
                android:background="#f1f1f1"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                app:autoSizeTextType="uniform"
                />

            <TextView

                android:id="@+id/Tutar"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/tutar"
                android:background="#f1f1f1"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                app:autoSizeTextType="uniform"
                />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:id="@+id/recycler_layout">


        </android.support.v7.widget.RecyclerView>


        <LinearLayout
            android:id="@+id/thirdRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/toplam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toplam_tutar"
                android:background="#f1f1f1"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginHorizontal="1dp"
                android:autoSizeTextType="uniform"
                android:layout_weight="1"
                />

            <TextView

                android:id="@+id/total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f1f1f1"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:autoSizeTextType="uniform"
                android:layout_weight="1"
                />


        </LinearLayout>

    </TableLayout>



</LinearLayout>